--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,17 @@ name: Deploy EduLearn Pro
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main"]
     branches-ignore: ['ignore']
+    paths: ".github/*"
+  
+  pull_request:
+      branches: [ "main"]
+  workflow_dispatch: 
+
 
 jobs:
-  build:
+  build-app:
     name: Build and Test
     runs-on: ubuntu-latest
 
@@ -15,37 +20,21 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
+      - name: run oneline script
+        uses: echo "Hello, World!"
+        
 
-      - name: Install Dependencies
-        run: npm install
+      - name: run a multiline script
+        run: 
+          echo "Hello, World!"
+          echo "This is a multiline script"
+  build-db:
+    needs: build-app
+    runs-on: windows-2022
 
-      - name: Run Tests
-        run: npm test
+  package: 
+    needs: [build-app,build-db]
+    runs-on: ubuntu-20.04
 
-  deploy:
-    name: Deploy to AWS S3 & CloudFront
-    runs-on: ubuntu-latest
-    needs: build
-    if: success()
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Setup AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-      - name: Deploy to S3
-        run: aws s3 sync ./build s3://my-edulearn-bucket --delete
-
-      - name: Invalidate CloudFront Cache
-        run: |
-          aws cloudfront create-invalidation --distribution-id ABCD1234XYZ --paths "/*"
+ 
