--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,13 +28,21 @@ jobs:
         run: 
           echo "Hello, World!"
           echo "This is a multiline script"
+  build-api:
+    runs-on: windows-latest
+    steps:
+      - run: echo "Building api"
   build-db:
     needs: build-app
     runs-on: windows-2022
+    steps:
+     - run: echo "Hello, World!"
 
   package: 
     needs: [build-app,build-db]
     runs-on: ubuntu-20.04
+    steps:
+      - run: echo "Hello, World!"
 
 
  
